--- a/chongWuKongJing/app/src/main/res/layout/activity_adding_equipment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_adding_equipment.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.qmuiteam.qmui.widget.QMUITopBar
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="?attr/qmui_topbar_height" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_weight="1"
-                android:background="#ADD8E6"
+                android:background="@drawable/background_gradient"
                 android:gravity="center"
                 android:textSize="18dp"
                 android:text="添加设备" />
