--- a/chongWuKongJing/app/src/main/res/layout/activity_main.xml
+++ b/chongWuKongJing/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,15 @@
     <RelativeLayout
         android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
+
         android:layout_alignParentBottom="true">
 
         <com.qmuiteam.qmui.widget.QMUITabSegment
             android:id="@+id/main_tab_segment"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@color/white"
+            android:layout_height="100dp"
+            android:background="@drawable/background_gradient"
             android:isScrollContainer="true"
             app:qmui_tab_icon_position="top">
 
