--- a/chongWuKongJing/app/src/main/res/layout/machine_fengweideng.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_fengweideng.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
 
@@ -31,7 +32,9 @@
                 android:id="@+id/diqu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:layout_weight="1"
+                android:textSize="20dp"
                 android:gravity="center"
                 android:text="上海   徐汇区" />
         </LinearLayout>
@@ -51,10 +54,10 @@
                 android:id="@+id/wendu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="30dp"
-
+                android:textSize="50dp"
                 android:text="31" />
 
             <TextView
@@ -62,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="20dp"
                 android:gravity="center"
                 android:text="多云转晴 " />
 
@@ -70,8 +74,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="20dp"
                 android:gravity="center"
-                android:text="20 / 35" />
+                android:text="27° / 38°" />
         </LinearLayout>
 
         <View
@@ -89,50 +94,34 @@
                 android:id="@+id/shidu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
                 android:layout_weight="1"
+                android:textSize="20dp"
                 android:gravity="center"
-                android:text="温度   66%" />
+                android:text="湿度   66%" />
 
             <TextView
                 android:id="@+id/fengdu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textSize="20dp"
                 android:text="东风   二级" />
         </LinearLayout>
     </LinearLayout>
 
-
-    <RelativeLayout
-        android:layout_width="match_parent" android:layout_weight="1"
-        android:layout_height="0dp">
-
-        <pl.droidsonroids.gif.GifImageView
-            android:id="@+id/GifImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="212dp"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/kuaisu_x_b" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="330dp"
-            android:layout_height="247dp"
-            android:layout_below="@id/GifImageView"
-            android:layout_centerHorizontal="true"
-            app:srcCompat="@drawable/machine_main_picture" />
-    </RelativeLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView10"
-            android:layout_width="73dp"
-            android:layout_height="64dp"
+            android:layout_width="63dp"
+            android:layout_height="54dp"
             android:layout_marginLeft="@dimen/dp_10"
 
             app:srcCompat="@drawable/fegnweideng" />
@@ -144,11 +133,34 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:max="3"
-            android:maxHeight="30dp"
+            android:gravity="center"
+            android:maxHeight="24dp"
             android:minHeight="30dp"
             android:progress="1"
             android:progressDrawable="@drawable/progress_style"
             android:thumb="@null" />
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_marginTop="100dp">
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/GifImageView"
+            android:layout_width="match_parent"
+            android:layout_height="231dp"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/kuaisu_x_b" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="match_parent"
+            android:layout_height="286dp"
+            android:layout_marginTop="130dp"
+            app:srcCompat="@drawable/wuguang" />
+    </RelativeLayout>
+
 
 </LinearLayout>
