--- a/chongWuKongJing/app/src/main/res/values/colors.xml
+++ b/chongWuKongJing/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="qian">#98DCD2</color>
+    <color name="shen">#00A0F0</color>
+
+    <color name="huise">#f6f5f5</color>
 </resources>
