--- a/chongWuKongJing/app/src/main/res/drawable/progress_style.xml
+++ b/chongWuKongJing/app/src/main/res/drawable/progress_style.xml
@@ -3,15 +3,19 @@
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="100dp" />
-            <solid android:color="#87CEEB"/>
-            <stroke android:width="1dp" android:color="#4B0082"/>
+            <solid android:color="@color/huise"/>
+            <!--<stroke android:width="1dp" android:color="#4B0082"/>-->
         </shape>
     </item>
 
     <item android:id="@android:id/progress">
         <scale android:scaleWidth="100%">
             <shape>
-                <solid android:color="#4B0082" />
+               <!-- <solid android:color="#4B0082" />-->
+                <gradient
+                    android:endColor="@color/qian"
+                    android:startColor="@color/shen">
+                </gradient>
                 <corners android:radius="100dp"/>
             </shape>
         </scale>
