--- a/chongWuKongJing/app/src/main/res/layout/fragment_userinfo_set.xml
+++ b/chongWuKongJing/app/src/main/res/layout/fragment_userinfo_set.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:layout_marginTop="10dp"
-        android:background="@color/btn_filled_blue_bg_disabled"/>
+        android:background="#f6f5f5"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,15 +40,7 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <com.qmuiteam.qmui.widget.grouplist.QMUICommonListItemView
-            android:id="@+id/group_list_item_kefu"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/qmui_list_item_height"
-            android:layout_weight="1"
-            app:qmui_accessory_type="chevron"
-            app:qmui_commonList_detailColor="@color/qmui_config_color_red"
-            app:qmui_commonList_titleColor="@color/qmui_s_link_color"
-            app:qmui_orientation="vertical" />
+
 
 
 
@@ -109,6 +101,31 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="134dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/btn_filled_blue_bg_disabled" />
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="#0088c7"
+            android:gravity="center"
+            android:textSize="18dp"
+            android:text="设备列表" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="#90e1f4"
+            android:gravity="center"
+            android:textSize="18dp"
+            android:text="退出登录" />
+    </LinearLayout>
 </LinearLayout>
