--- a/chongWuKongJing/app/src/main/res/layout/machine_pic.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_pic.xml
@@ -18,14 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="212dp"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="150dp"
             android:src="@drawable/kuaisu_x_b" />
 
         <ImageView
             android:id="@+id/imageView9"
-            android:layout_width="330dp"
-            android:layout_height="247dp"
+            android:layout_width="436dp"
+            android:layout_height="315dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/machine_main_picture" />
+            app:srcCompat="@drawable/ciguang" />
     </FrameLayout>
 </LinearLayout>
