--- a/chongWuKongJing/app/src/main/res/layout/drag_item_shanchu.xml
+++ b/chongWuKongJing/app/src/main/res/layout/drag_item_shanchu.xml
@@ -55,16 +55,17 @@
                     android:layout_marginLeft="15dp"
                     app:srcCompat="@drawable/machine_main_picture" />
 
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="173dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="AIR  MEDIC"
-                    android:textSize="25dp" />
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="151dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="AIR  MEDIC"
+                android:textSize="25dp" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
@@ -73,6 +74,13 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="16dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="@dimen/dp_4"
+                            app:srcCompat="@drawable/zaixian" />
 
                         <TextView
                             android:id="@+id/textView12"
@@ -90,6 +98,12 @@
                         android:layout_weight="1"
                         android:orientation="horizontal">
 
+                        <ImageView
+                            android:id="@+id/imageView6"
+                            android:layout_width="16dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="@dimen/dp_4"
+                            app:srcCompat="@drawable/kaiji" />
                         <TextView
                             android:id="@+id/textView13"
                             android:layout_width="0dp"
@@ -105,6 +119,13 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/imageView7"
+                            android:layout_width="16dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="@dimen/dp_4"
+                            app:srcCompat="@drawable/yeliangji" />
 
                         <TextView
                             android:id="@+id/textView14"
