--- a/chongWuKongJing/app/src/main/res/layout/machine_pic.xml
+++ b/chongWuKongJing/app/src/main/res/layout/machine_pic.xml
@@ -9,23 +9,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/machine_main_picture" />-->
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_marginTop="100dp">
 
         <pl.droidsonroids.gif.GifImageView
             android:id="@+id/GifImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="212dp"
+            android:layout_width="match_parent"
+            android:layout_height="231dp"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="150dp"
             android:src="@drawable/kuaisu_x_b" />
 
         <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="436dp"
-            android:layout_height="315dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/ciguang" />
-    </FrameLayout>
+            android:id="@+id/imageView7"
+            android:layout_width="match_parent"
+            android:layout_height="286dp"
+            android:layout_marginTop="130dp"
+            app:srcCompat="@drawable/ruoguang" />
+    </RelativeLayout>
 </LinearLayout>
