--- a/chongWuKongJing/app/src/main/res/layout/dingshi_fragment.xml
+++ b/chongWuKongJing/app/src/main/res/layout/dingshi_fragment.xml
@@ -111,7 +111,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_weight="1"
-            android:background="@color/qian"
+            android:background="#90e1f4"
             android:gravity="center"
             android:text="12:12"
             android:textColor="@color/cardview_light_background"
@@ -124,7 +124,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_weight="1"
-            android:background="@color/qian"
+            android:background="#90e1f4"
             android:gravity="center"
             android:text="12:12"
             android:textColor="@color/cardview_light_background"
